--- a/client/main.css
+++ b/client/main.css
@@ -6,3 +6,16 @@
 .list-group-item {
   height: 55px;
 }
+
+.bins-share {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin: 10px;
+}
+
+.bins-share .input-group {
+  width: 50%;
+}
